<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scheduler</string>
    <string name="add_event">add</string>
    <string name="del_event">delete</string>
    <string name="no_events">No Events Yet</string>
    <string name="menu_insert">Add Event</string>
    <string name="menu_delete">Delete Event</string>
    <string name="title">Title:</string>
	<string name="time">Time:</string>
	<string name="repetition">Repetition:</string>
	<string name="mode">Mode:</string>
	<string-array name="ring_modes">
		<item>Normal</item>
		<item>Vibrate</item>
		<item>Silent</item>
	</string-array>
	<string name="prompt">Choose a mode:</string>
	<string name="volume">Volume:</string>
	<string name="vibrate">Vibrate</string>
    <string name="confirm">Confirm</string>
    <string name="edit_event">Edit Event</string>
    <string name="normal">Normal</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="service_stopped">Scheduler Service Stopped.</string>
    <string name="service_started">Scheduler Service Started.</string>
    <string name="service_label">Scheduler Service.</string>
    <string name="service_connected">Connected to Scheduler Service.</string>
    <string name="service_disconnected">Disconnected from Scheduler Service.</string>
</resources>
