<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/title" />

		<EditText android:id="@+id/title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/time" />
			
		<TimePicker android:id="@+id/run_time"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
			
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/repetition" />
			
		<CheckBox android:id="@+id/sun"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/sunday" />
			
		<CheckBox android:id="@+id/mon"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/monday" />
			
		<CheckBox android:id="@+id/tues"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/tuesday" />
			
		<CheckBox android:id="@+id/wed"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/wednesday" />
			
		<CheckBox android:id="@+id/thur"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/thursday" />
			
		<CheckBox android:id="@+id/fri"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/friday" />
			
		<CheckBox android:id="@+id/sat"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/saturday" />
			
		<Button android:id="@+id/confirm"
			android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>
	
</ScrollView>